--- a/bw/bw-uni.qmd
+++ b/bw/bw-uni.qmd
@@ -3,3 +3,35 @@ title: "Univariate Viz"
 ---
 
 Use this file to generate a professional looking **univariate** visualization. The visualization will not perfect the first time but you are expected to improve on it throughout the semester especially after covering advanced topics such as effective viz.
+
+
+
+```{r}
+
+library(ggplot2)
+
+simpsons_episodes = read.csv("/Users/nrittenberg24/Desktop/simpsons_episodes.csv")
+head(simpsons_episodes)
+dim(simpsons_episodes)
+
+
+ggplot(simpsons_episodes, aes(x = imdb_rating)) + 
+  geom_density(fill = "yellow", color = "skyblue", size = 1, alpha = 0.7) + 
+  theme_classic() +
+  labs(title = "                       IMDB Ratings of Individual Simpsons Epidodes",
+       x = "IMDB Rating",
+       y = "Percentage of Episodes",
+       caption = "Created By: Nolan Rittenberg") +
+  theme(
+    plot.title = element_text(color = "skyblue", size = 14, face = "bold"),  
+    axis.title.x = element_text(color = "skyblue", size = 12, face = "bold"), 
+    axis.title.y = element_text(color = "skyblue", size = 12, face = "bold"),  
+    axis.text = element_text(color = "skyblue", size = 10, face = "bold"), 
+    plot.caption = element_text(color = "skyblue", size = 10, face = "italic") 
+  )
+
+
+
+
+```
+
