Completed Best Work

--- a/bw/bw-bi.qmd
+++ b/bw/bw-bi.qmd
@@ -1,5 +1,8 @@
 ---
 title: "Bivariate Viz"
+execute: 
+  warning: false
+  error: false
 ---
 
 Use this file to generate a professional looking **bivariate** visualization.  The visualization will not perfect the first time but you are expected to improve it throughout the semester especially after covering advanced topics such as effective viz.
@@ -8,6 +11,7 @@ Use this file to generate a professional looking **bivariate** visualization.  T
 
 
 ```{r}
+library(tidyverse)
 
 CA_Test_Scores = read.csv("https://vincentarelbundock.github.io/Rdatasets/csv/AER/CASchools.csv")
 
@@ -17,8 +21,14 @@ ggplot(CA_Test_Scores, aes(x = income, y = math)) +
   theme_bw() +
   labs(title = "California: Income vs. Standardized Math Test Scores",
        x = "Income",
-       y = "Test Score",
-       caption = "Created By: Nolan Rittenberg")
+       y = "Math Test Score",
+       caption = "Created By: Nolan Rittenberg") +
+  theme(
+    panel.background = element_rect(fill = "grey", color = "grey"),
+    plot.background = element_rect(fill = "grey", color = "grey"),
+    legend.background = element_rect(fill = "grey", color = "grey")
+    )
+  
 
 ```
 :::
@@ -27,6 +37,9 @@ This is a bivariate graph that shows the correlation between household income an
 
 
 ```{r}
+library("mosaic")
+library("mosaicData")
+library("fivethirtyeight")
 
 
 data(bechdel)
