--- a/bw/bw-tri.qmd
+++ b/bw/bw-tri.qmd
@@ -1,5 +1,8 @@
 ---
 title: "Trivariate Viz"
+execute: 
+  warning: false
+  error: false
 ---
 
 Use this file to generate a professional looking **trivariate** visualization.  The visualization will not perfect the first time but you are expected to improve on it throughout the semester especially after covering advanced topics such as effective viz.
@@ -21,6 +24,13 @@ ggplot(simpsons_episodes, aes(x = views, y = imdb_rating, color = season)) +
   geom_point() +
   labs(title = "Which Seasons of The Simpsons Have the Most Views and Highest Ratings?", x = "Views", y = "IMDB Rating", caption = "Created By:
            Nolan Rittenberg") + 
-  theme_minimal()
+   theme_dark() +
+  theme(
+    panel.background = element_rect(fill = "lightgrey", color = "lightgrey"),
+    plot.background = element_rect(fill = "lightgrey", color = "lightgrey"),
+    legend.background = element_rect(fill = "lightgrey", color = "lightgrey")
+    )
+
+
 ```
 
