--- a/ica/ica-multi.qmd
+++ b/ica/ica-multi.qmd
@@ -3,3 +3,78 @@ title: "Mulivariate Viz"
 ---
 
 Use this file for practice with the **mulivariate viz** in-class activity.  Refer to the class website for details.
+
+
+This ICA initially lost all progress. Had to go back and reupload answers. 
+
+
+
+
+```{r}
+ library(tidyverse)
+
+# Import data
+weather <- read.csv("https://mac-stat.github.io/data/weather_3_locations.csv") |> 
+  mutate(date = as.Date(date))  
+
+# Check out the first 6 rows
+# What are the units of observation?
+head(weather)
+```
+
+
+```{r}
+# How many data points do we have? 
+nrow(weather)
+```
+
+
+```{r}
+# What type of variables do we have?
+str(weather)
+```
+
+
+```{r}
+ggplot(weather, aes(x = temp3pm)) + 
+  geom_density()
+```
+
+
+```{r}
+# Plot 1 (no facets & starting from a density plot of temp3pm)
+ggplot(weather, aes(x = temp3pm, fill = location)) + 
+  geom_density(alpha = 0.5)
+```
+
+
+
+```{r}
+# Plot 2 (no facets or densities)
+ggplot(weather, aes(y = temp3pm, x = location)) + 
+  geom_boxplot()
+```
+
+
+
+```{r}
+# Plot 3 (facets)
+ggplot(weather, aes(x = temp3pm, fill = location)) + 
+  geom_density(alpha = 0.5) + 
+  facet_wrap(~ location)
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
