--- a/ica/ica-bi.qmd
+++ b/ica/ica-bi.qmd
@@ -1,3 +1,9 @@
+---
+title: "Bivariate Viz"
+---
+
+
+
 ```{r}
 # Load data
 elections <- read.csv("https://mac-stat.github.io/data/election_2020_county.csv")
