--- a/bw/Exam 1.qmd
+++ b/bw/Exam 1.qmd
@@ -1,6 +1,13 @@
 ---
-title: "Exam1_code"
-format: html
+title: "Exam 1"
+execute:
+  echo: true
+  warning: false
+  error: false
+
+format: 
+  html: 
+    code-fold: true
 ---
 
 Research question:
@@ -81,7 +88,7 @@ ggplot(fc, aes(x = food_category, y = consumption)) +
 ```
 
 Overall Food Consumption / Country
-```{r, fig.height=15, fig.width=15}
+```{r, fig.height=22, fig.width=11}
 ggplot(fc, aes(y = country, x = consumption)) + 
   geom_boxplot() + 
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
@@ -146,8 +153,21 @@ ggplot(fc, aes(x = food_category, y = consumption, fill = food_category)) +
 ```
 
 
+```{r, fig.height=22, fig.width=11}
+
+ggplot(fc, aes(x = consumption, y = country, fill = food_category)) + 
+  geom_bar(stat = "identity") + 
+  theme_minimal() + 
+  scale_fill_viridis_d() +
+  labs(
+    title = "What does the consumption of each food category in each country look like?",
+    subtitle = "By: Nolan Rittenberg", 
+    caption = "2025"
+  )
+   
 
 
+```
 
 
 
