--- a/bw/bw-spatial.qmd
+++ b/bw/bw-spatial.qmd
@@ -1,11 +1,14 @@
 ---
 title: "Spatial Viz"
-execute: 
+execute:
+  echo: true
   warning: false
   error: false
----
 
-Use this file to generate a professional looking **spatial** visualization.  The visualization will not perfect the first time but you are expected to improve on it throughout the semester especially after covering advanced topics such as effective viz.
+format: 
+  html: 
+    code-fold: true
+---
 
 
 
@@ -62,7 +65,7 @@ leaflet(data = favorite_stp) |>
     "topright",
     pal = color_palette,
     values = ~favorite, 
-    title = "Nolan Rittenberg's Favorite Places in the World",
+    title = "Nolan Rittenberg's Favorite Places in the World | 2025", 
   )
 
 ```
