--- a/bw/bw-tri.qmd
+++ b/bw/bw-tri.qmd
@@ -1,19 +1,21 @@
 ---
 title: "Trivariate Viz"
-execute: 
+execute:
+  echo: true
   warning: false
   error: false
----
 
-Use this file to generate a professional looking **trivariate** visualization.  The visualization will not perfect the first time but you are expected to improve on it throughout the semester especially after covering advanced topics such as effective viz.
+format: 
+  html: 
+    code-fold: true
+---
 
 
 
 
 ```{r}
 simpsons_episodes = read.csv("/Users/nrittenberg24/Desktop/simpsons_episodes.csv")
-head(simpsons_episodes)
-dim(simpsons_episodes)
+
 
 
 library(ggplot2)
@@ -22,13 +24,16 @@ library(dplyr)
 ggplot(simpsons_episodes, aes(x = views, y = imdb_rating, color = season)) +
   scale_color_viridis_b() +
   geom_point() +
-  labs(title = "Which Seasons of The Simpsons Have the Most Views and Highest Ratings?", x = "Views", y = "IMDB Rating", caption = "Created By:
-           Nolan Rittenberg") + 
+  labs(title = "Which Seasons of The Simpsons Have the Most Views and Highest Ratings?",
+      x = "Views",
+      y = "IMDB Rating",
+      caption = "By: Nolan Rittenberg | 2025\nFiveThirtyEight — 'The Simpsons by the Data'") + 
    theme_dark() +
   theme(
-    panel.background = element_rect(fill = "lightgrey", color = "lightgrey"),
-    plot.background = element_rect(fill = "lightgrey", color = "lightgrey"),
-    legend.background = element_rect(fill = "lightgrey", color = "lightgrey")
+    panel.background = element_rect(fill = "white", color = "white"),
+    plot.background = element_rect(fill = "white", color = "white"),
+    legend.background = element_rect(fill = "white", color = "white"),
+    plot.caption = element_text(hjust = 0, size = 7),
     )
 
 
